language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_module_from_constant_in_const.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport maths\n\nconst x = maths   .  pi\n"
---
----- BEFORE RENAME
-- maths.gleam
pub const pi = 3.14

-- app.gleam

import maths

const x = maths   .  pi
          ↑▔▔▔▔        


----- AFTER RENAME
-- maths.gleam
pub const pi = 3.14

-- app.gleam

import maths as m

const x = m   .  pi
