language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_module_from_constant_in_expression.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport maths\n\npub fn main() {\n  echo maths  .    pi\n}\n"
---
----- BEFORE RENAME
-- maths.gleam
pub const pi = 3.14

-- app.gleam

import maths

pub fn main() {
  echo maths  .    pi
       ↑▔▔▔▔         
}


----- AFTER RENAME
-- maths.gleam
pub const pi = 3.14

-- app.gleam

import maths as m

pub fn main() {
  echo m  .    pi
}
