language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_module_from_import.snap
---
source: language-server/src/tests/rename.rs
expression: import      option
---
----- BEFORE RENAME
-- option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam
import      option
            ↑▔▔▔▔▔


----- AFTER RENAME
-- option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam
import      option as opt
