language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_module_from_import_namespaced_with_alias.snap
---
source: language-server/src/tests/rename.rs
expression: import   std /   option   as     opt
---
----- BEFORE RENAME
-- std/option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam
import   std /   option   as     opt
                                 ↑▔▔


----- AFTER RENAME
-- std/option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam
import   std /   option   as o
