language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_module_from_import_namespaced_with_unqualified_values.snap
---
source: language-server/src/tests/rename.rs
expression: "import   std /   option   .   {    Some, None }"
---
----- BEFORE RENAME
-- std/option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam
import   std /   option   .   {    Some, None }
                 ↑▔▔▔▔▔                        


----- AFTER RENAME
-- std/option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam
import   std /   option   .   {    Some, None } as opt
