language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_module_from_import_with_alias_to_original_name.snap
---
source: language-server/src/tests/rename.rs
expression: import   option   as     opt
---
----- BEFORE RENAME
-- option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam
import   option   as     opt
                         ↑▔▔


----- AFTER RENAME
-- option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam
import   option
