language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_module_from_type_in_annotation.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport option\n\nconst x: option.Option(Int) = option.Some(1)\n"
---
----- BEFORE RENAME
-- option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam

import option

const x: option.Option(Int) = option.Some(1)
         ↑▔▔▔▔▔                             


----- AFTER RENAME
-- option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam

import option as opt

const x: opt.Option(Int) = opt.Some(1)
